# sfSnakeGamePro

./: CMakeLists.txt  README.md
doc/: 贪吃蛇游戏设计说明.md
src/: Game.cpp  Game.h
src/element/: Barrier.cpp  Barrier.h  Fruit.cpp  Fruit.h  OptionButton.cpp  OptionButton.h  Snake.cpp  Snake.h
src/screen/: AboutScreen.cpp  GameScreen.cpp  GameScreen.h  HelpScreen.cpp  OptionScreen.cpp  OptionScreen.h
